--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ button {
     width: 50px;
     height: 50px;
     border-radius: 50%; /* Makes the button round */
-    background-color: red;
+    background-color: #ff3c3c;
     color: white;
     border: none;
     position: fixed;
@@ -118,6 +118,5 @@ button {
     cursor: pointer;
     font-size: 14px;
     text-align: center;
-    line-height: 50px; /* Center the text vertically */
 }
 
