--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ select, input {
 
 button {
     margin-top: 10px;
-    padding: 10px;
+    /*! padding: 10px; */
     width: 100%;
 }
 
@@ -46,7 +46,7 @@ button {
 }
 
 #actions button {
-    width: calc(33% - 10px);
+    width: calc(23% - 10px);
     margin-right: 10px;
     display: inline-block;
 }
@@ -130,8 +130,8 @@ button {
 
 /* Style for the images inside the buttons */
 .pocket-img {
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
 }
 
 
